removal or transition, both the original and new interface names are
generally listed for reference.

Items marked with a "'" (single quote) are undocumented and may be
removed at any time.

7.42
----
include/raytrace librt
	db_search_context removed in favor of new db_search params -
	old db_search function signature can temporarily be obtained
	under the name db_search_old

7.40
----
include/bu/process.h
	bu_process_exec: replaced by bu_process_create
	bu_process_wait: replaced by bu_process_wait_n
	bu_process_read: replaced by bu_process_read_n
	bu_process_open: replaced by bu_process_file_open
	bu_process_close: replaced by bu_process_file_close
	bu_process_args: replaced by bu_process_args_n
	bu_process_id: replaced by bu_pid
	bu_terminate: replaced by bu_pid_terminate

MGED commands
	p, r and g optional arguments to summary command -
	info can be obtained via search

	dbip, get_dbip - exposure of low-level pointer information
        Shouldn't be using this at a user/scripting level

7.38
----
MGED commands
	E (a.k.a "big E") - replaced by "draw -m5"

7.32
----
include/bu/app.h
        bu_brlcad_root: replaced by bu_dir
        bu_brlcad_dir:  replaced by bu_dir

include/bg/chull.h
        All functions returning point arrays instead of index arrays.
        Will be replaced by similarly named functions returning
        indexes into provided points array, to allow the caller
        to decide if new arrays are needed. [deprecated 7.32]
        bg_polyline_2d_chull, bg_2d_chull, bg_3d_coplanar_chull,
        bg_3d_chull

include/bu/exit.h
        TODO: warrants discussion

        considering replacing bu_backtrace and bu_crashreport with
        versions that take an optional parameter to pass in a full
        path from the calling application.  (Currently available as
        bu_backtrace_app and bu_crashreport_app, these would replace
        existing versions after deprecation is final.)

MGED gui