@@ -66,6 +66,8 @@ extern int ged_view_snap(struct ged *gedp, int argc, const char *argv[]);
 extern int ged_viewdir_core(struct ged *gedp, int argc, const char *argv[]);
 extern int ged_ypr_core(struct ged *gedp, int argc, const char **argv);
 
+extern int _view_cmd_old_obj(struct ged *gedp, int argc, const char *argv[]);
+
 __END_DECLS
 
 #endif /* GED_VIEW_SUBCMDS_H */
