@@ -36,6 +36,7 @@ extern "C" {
 #include "bu/opt.h"
 #include "bu/vls.h"
 #include "bv.h"
+#include "raytrace.h"
 }
 #include "./ged_view.h"
 #include "../ged_private.h"
@@ -533,6 +534,94 @@ _view_cmd_objs(void *bs, int argc, const char **argv)
     return _ged_subcmd_exec(gedp, (struct bu_opt_desc *)d, (const struct bu_cmdtab *)_obj_cmds,
 			    "view obj", "[options] subcommand [args]", gd, argc, argv, help, cmd_pos);
 }
+
+
+/* Adding an old style "view obj" subcommand - will eventually need to align
+ * its behavior and that of the above logic.  Probably need to fold the gobjs
+ * logic in somehow as well (or move it to the edit command, since it's really
+ * intended for object editing applications.) */
+int
+_view_cmd_old_obj(struct ged *gedp, int argc, const char *argv[])
+{
+    if (!gedp || argc < 4 || !argv)
+	return BRLCAD_ERROR;
+
+    // We know we're the obj command
+    argc--; argv++;
+
+    // Only have info implemented in the old mode
+    if (!BU_STR_EQUAL(argv[1], "info") || !BU_STR_EQUAL(argv[2], "mode"))
+	return BRLCAD_ERROR;
+
+    /* initialize result */
+    bu_vls_trunc(gedp->ged_result_str, 0);
+
+    // Need to see if we can match argv[0] up to a view object.  Doing this the
+    // old way here - the new mode logic will have a different implementation.
+    struct directory **dpp = _ged_build_dpp(gedp, argv[0]);
+    if (!dpp) {
+	bu_vls_printf(gedp->ged_result_str, "unknown");
+	return BRLCAD_OK;
+    }
+
+    struct bu_list *hdlp = gedp->ged_gdp->gd_headDisplay;
+    struct display_list *gdlp = BU_LIST_NEXT(display_list, hdlp);
+    struct directory **tmp_dpp = NULL;
+    size_t i;
+    while (BU_LIST_NOT_HEAD(gdlp, hdlp)) {
+	struct bv_scene_obj *sp;
+	struct display_list *next_gdlp = BU_LIST_PNEXT(display_list, gdlp);
+	for (BU_LIST_FOR(sp, bv_scene_obj, &gdlp->dl_head_scene_obj)) {
+	    if (!sp->s_u_data)
+		continue;
+	    const struct ged_bv_data *bdata = (const struct ged_bv_data *)sp->s_u_data;
+	    for (i = 0, tmp_dpp = dpp;
+		    i < bdata->s_fullpath.fp_len && *tmp_dpp != RT_DIR_NULL;
+		    ++i, ++tmp_dpp) {
+		if (bdata->s_fullpath.fp_names[i] != *tmp_dpp)
+		    break;
+	    }
+
+	    if (!tmp_dpp || *tmp_dpp != RT_DIR_NULL)
+		continue;
+
+	    switch (sp->s_os->s_dmode) {
+		case _GED_WIREFRAME:
+		    bu_vls_printf(gedp->ged_result_str, "wireframe");
+		    break;
+		case _GED_SHADED_MODE_BOTS:
+		case _GED_SHADED_MODE_ALL:
+		    bu_vls_printf(gedp->ged_result_str, "shaded");
+		    break;
+		case _GED_BOOL_EVAL:
+		    bu_vls_printf(gedp->ged_result_str, "evaluated");
+		    break;
+		case _GED_HIDDEN_LINE:
+		    bu_vls_printf(gedp->ged_result_str, "hidden_line");
+		    break;
+		case _GED_SHADED_MODE_EVAL:
+		    bu_vls_printf(gedp->ged_result_str, "shaded_evaluated");
+		    break;
+		case _GED_WIREFRAME_EVAL:
+		    bu_vls_printf(gedp->ged_result_str, "shaded_evaluated");
+		    break;
+		default:
+		    bu_vls_printf(gedp->ged_result_str, "unknown");
+		    break;
+	    };
+
+	    return BRLCAD_OK;
+	}
+
+	gdlp = next_gdlp;
+    }
+
+    // If we got this far, something wasn't right - either we couldn't find the
+    // object, or the mode wasn't recognized.
+    bu_vls_printf(gedp->ged_result_str, "unknown");
+    return BRLCAD_OK;
+}
+
 
 // Local Variables:
 // tab-width: 8
